Java 25, and dep updates (#7578)