@@ -143,7 +143,7 @@
     <cia.project.versions.httpclient>4.5.14</cia.project.versions.httpclient>
     <cia.project.versions.guava>33.4.8-jre</cia.project.versions.guava>
     <cia.project.versions.jackson>2.19.2</cia.project.versions.jackson>
-    <cia.project.versions.netty>4.2.3.Final</cia.project.versions.netty>
+    <cia.project.versions.netty>4.2.4.Final</cia.project.versions.netty>
     <cia.project.versions.xerces>2.12.2</cia.project.versions.xerces>
     <cia.project.versions.commons.compress>1.28.0</cia.project.versions.commons.compress>
     <cia.project.versions.xmlapis>1.4.01</cia.project.versions.xmlapis>
@@ -1446,6 +1446,22 @@
           --add-opens java.base/java.util=ALL-UNNAMED</testAdditionalRuntimeArgLine>
         <jdk.src.version>21</jdk.src.version>
         <jdk.target.version>21</jdk.target.version>
+        <forbiddenapis.skip>false</forbiddenapis.skip>
+      </properties>
+    </profile>
+    <profile>
+      <id>java25</id>
+      <activation>
+        <jdk>25</jdk>
+      </activation>
+      <properties>
+        <testAdditionalRuntimeArgLine>-XX:+EnableDynamicAgentLoading --add-exports
+          java.base/sun.nio.ch=ALL-UNNAMED
+          --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-opens
+          java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+          --add-opens java.base/java.util=ALL-UNNAMED</testAdditionalRuntimeArgLine>
+        <jdk.src.version>25</jdk.src.version>
+        <jdk.target.version>25</jdk.target.version>
         <forbiddenapis.skip>false</forbiddenapis.skip>
       </properties>
     </profile>
